Sun Jun 25 22:44:12 CEST 2000  Marc Lehmann <pcg@goof.com>

	* paint_funcs.c: Fix small bug in last patch.

2000-06-26  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpexport.c: added a new export_action type
	so PNG for example correctly shows "PNG can't handle layers"
	even if the suggested action is to flatten the image since
	the background has no alpha-channel. Fixes bug #15085.

2000-06-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/url.c: use a fixed-size buffer to make 
	the code ANSI compliant. Fixes bug #15338.

2000-06-25  Tuomas Kuosmanen  <tigert@tigert.gimp.org>

	* cursors/gimp-tool-cursors.xcf: Updated the .xcf file that
	contains the cursors. thanks Sven for pointing this out.
	I also corrected a small glitch on the bezier cursors mask.

2000-06-25  Sven Neumann  <sven@gimp.org>

	* app/resize.c (offset_update): Adding 0.5 isn't always the 
	right thing to do when converting to integer. Especially
	not if dealing with negative values. This change should
	fix the off-by-one error reported lately.

2000-06-25  Tuomas Kuosmanen  <tigert@tigert.gimp.org>

	* cursors/bezier_select_small.xbm
	* cursors/bezier_select_small_mask.xbm: Updated the bezier
	tool cursor bitmap to a more compact one

2000-06-24  Sven Neumann  <sven@gimp.org>

	* autogen.sh: applied patch from Sesse <sgunderson@bigfoot.com>
	that fixes the check for recent versions of auto[conf|make].

2000-06-23  Sven Neumann <sven@gimp.org>
	
	* Makefile.am
	* configure.in
	* gimptool.1: removed
	* gimptool.1.in: new file to generate gimptool.1 with the proper 
	version number

	* gimp.1.in
	* gimprc.5.in: unify use of version and date  
	
2000-06-22  Matt Wilson  <msw@redhat.com>

	* app/paint_core.c (paint_core_new): allocate the tool's
	paint_core with g_new0.  This prevents us from having cruft in
	unused tools.  Systems with sensitive FPUs (Alpha) will raise
	exception in the paint_core_cursor_update if paint_core->last[xy]
	are messy.

	* app/bezier_select.c (tools_new_bezier_select)